[gd_scene load_steps=12 format=2]

[ext_resource path="res://script/Menu.gd" type="Script" id=1]
[ext_resource path="res://pic/player.png" type="Texture" id=2]
[ext_resource path="res://scence/background.tscn" type="PackedScene" id=3]
[ext_resource path="res://sound/sound1.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://font/MadouFutoMaruGothic-d9Xo7.ttf"

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://font/MadouFutoMaruGothic-d9Xo7.ttf"

[sub_resource type="DynamicFont" id=8]
size = 80
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://font/MadouFutoMaruGothic-d9Xo7.ttf"

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = SubResource( 4 )

[sub_resource type="AtlasTexture" id=3]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="background" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.692
autoplay = true

[node name="home" type="Node2D" parent="."]

[node name="Player" type="Sprite" parent="home"]
position = Vector2( 488, 236 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 2 )

[node name="name_eng" type="Label" parent="home"]
margin_left = 626.0
margin_top = 251.0
margin_right = 876.0
margin_bottom = 302.0
custom_fonts/font = SubResource( 6 )
text = "GHOST CITY"

[node name="name" type="Label" parent="home"]
margin_left = 560.0
margin_top = 161.0
margin_right = 920.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 8 )
text = "死 の 都 "

[node name="Start" type="Button" parent="home"]
margin_left = 682.0
margin_top = 343.0
margin_right = 876.0
margin_bottom = 385.0
custom_fonts/font = SubResource( 2 )
text = "START"
icon = SubResource( 3 )
__meta__ = {
"_editor_description_": "START"
}

[node name="Collection" type="Button" parent="home"]
margin_left = 684.0
margin_top = 414.0
margin_right = 878.0
margin_bottom = 456.0
custom_fonts/font = SubResource( 2 )
text = "COLLECTION"
__meta__ = {
"_editor_description_": ""
}

[node name="Tutorial" type="Button" parent="home"]
margin_left = 685.0
margin_top = 484.0
margin_right = 879.0
margin_bottom = 526.0
custom_fonts/font = SubResource( 2 )
text = "TUTORIAL"
__meta__ = {
"_editor_description_": ""
}

[node name="now" type="Node2D" parent="."]

[connection signal="pressed" from="home/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="home/Collection" to="." method="_on_Story_pressed"]
[connection signal="pressed" from="home/Tutorial" to="." method="_on_Tutorial_pressed"]
